--- a/WeatherPy/WeatherPy-Copy1.ipynb
+++ b/WeatherPy/WeatherPy-Copy1.ipynb
@@ -2048,7 +2048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** Based on the linear regression calculations and the r values for latitude and cloudiness it seems there is no correlation between the two for the northern hemisphere and a weak correlation between the two for the southern hemisphere. In the southern hemisphere it seems as you get farther away from the equator the less cloudy it is, some of the time"
+    "**Discussion about the linear relationship:** Based on the linear regression calculations and the r values for latitude and cloudiness it seems there is no correlation between the two for the northern hemisphere and a very weak correlation between the two for the southern hemisphere showing as you get farther away from the equator the less cloudy it is in some cases. "
    ]
   },
   {
